# niri-de

./: Cargo.toml  README.md  justfile
authkit/: Cargo.toml  LICENSE
authkit/.hg/: dirstate  hgrc  undo.desc
authkit/.hg/cache/: branch2-base  hgtagsfnodes1  rbc-revs-v2  tags2
authkit/.hg/store/: 00changelog.d  00changelog.i  00manifest.i  fncache  undo
authkit/.hg/store/data/: _cargo.lock.i  _cargo.toml.i  _l_i_c_e_n_s_e.i  _r_e_a_d_m_e.markdown.i  _r_e_a_d_m_e.md.i  build.rs.i  rust-toolchain.toml.i  ~2egitignore.i  ~2ehgignore.i  ~2ehgtags.i
authkit/.hg/store/data/libpam-sys/: _cargo.lock.i  _cargo.toml.i  _l_i_c_e_n_s_e.i  _r_e_a_d_m_e.md.i  build.rs.i
authkit/.hg/store/data/libpam-sys/libpam-sys-consts/: _cargo.toml.i  _r_e_a_d_m_e.md.i  build.rs.i
authkit/.hg/store/data/libpam-sys/libpam-sys-consts/src/: constants.rs.i  lib.rs.i  pam__impl.rs.i
authkit/.hg/store/data/libpam-sys/libpam-sys-helpers/: _cargo.toml.i  _r_e_a_d_m_e.md.i  build.rs.i
authkit/.hg/store/data/libpam-sys/libpam-sys-helpers/src/: constants.rs.i  lib.rs.i  memory.rs.i  pam__impl.rs.i
authkit/.hg/store/data/libpam-sys/libpam-sys-impls/: _cargo.toml.i  _r_e_a_d_m_e.md.i  build.rs.i
authkit/.hg/store/data/libpam-sys/libpam-sys-impls/src/: lib.rs.i  pam__impl.rs.i
authkit/.hg/store/data/libpam-sys/libpam-sys-test/: _cargo.toml.i  _r_e_a_d_m_e.md.i  build.rs.i  illumos__pam__impl.h.i  xsso__constants.h.i  xsso__pam__appl.h.i
authkit/.hg/store/data/libpam-sys/libpam-sys-test/tests/: ctest.rs.i  runner.rs.i  test__constants.rs.i
authkit/.hg/store/data/libpam-sys/src/: __doc.rs.i  aliases.rs.i  constants.rs.i  ffi.rs.i  helpers.rs.i  lib.rs.i  pam__impl.rs.i  structs.rs.i
authkit/.hg/store/data/libpam-sys/src/funcs/: xsso__base.rs.i
authkit/.hg/store/data/pam/: _cargo.toml.i  _r_e_a_d_m_e.md.i
authkit/.hg/store/data/pam-http/: _cargo.toml.i  _justfile.i  _r_e_a_d_m_e.md.i  test.c.i
authkit/.hg/store/data/pam-http/conf/: http-auth.i
authkit/.hg/store/data/pam-http/src/: ffi.rs.i  lib.rs.i
authkit/.hg/store/data/pam-sober/: _cargo.toml.i  _justfile.i  test.c.i
authkit/.hg/store/data/pam-sober/conf/: sober-auth.i
authkit/.hg/store/data/pam-sober/src/: ffi.rs.i  lib.rs.i  ~2elib.rs.swp.i
authkit/.hg/store/data/pam/src/: constants.rs.i  conv.rs.i  hooks.rs.i  items.rs.i  lib.rs.i  macros.rs.i  module.rs.i
authkit/.hg/store/data/src/: __doc.rs.i  constants.rs.i  conv.rs.i  environ.rs.i  handle.rs.i  items.rs.i  lib.rs.i  logging.rs.i  macros.rs.i  memory.rs.i  module.rs.i  pam__ffi.rs.i
authkit/.hg/store/data/src/libpam/: answer.rs.i  conversation.rs.i  environ.rs.i  handle.rs.i  items.rs.i  memory.rs.i  message.rs.i  mod.rs.i  module.rs.i  pam__ffi.rs.i  question.rs.i  response.rs.i
authkit/.hg/store/data/src/pam__ffi/: conversation.rs.i  handle.rs.i  memory.rs.i  message.rs.i  mod.rs.i  module.rs.i  response.rs.i
authkit/.hg/store/data/testharness/: _cargo.toml.i  build.rs.i  install-test-harness.sh.i  nonstick__testharness.conf.i
authkit/.hg/store/data/testharness/container/: _containerfile.i  _containerfile.orig.i
authkit/.hg/store/data/testharness/src/: lib.rs.i
authkit/.hg/store/data/testharness/tests/: end2end.rs.i
authkit/.hg/store/data/~2egithub/workflows/: build.yml.i  check.yml.i
authkit/examples/: login.rs  session.rs
authkit/src/: conversation.rs  environ.rs  handle.rs  helper.rs  items.rs  lib.rs  tty.rs
authkit/src/conversation/: answer.rs  question.rs
authkit/src/pam/: aliases.rs  constants.rs  conversation.rs  environ.rs  ffi.rs  handle.rs  helper.rs  items.rs  mod.rs
authkit/src/pam/conversation/: answer.rs  question.rs
logni/: Cargo.toml
logni/src/: main.rs
niri-lm/: Cargo.toml  README.md
niri-lm/src/: macros.rs  main.rs
resources/: niri-lm.kdl  niri-lm.service  niri.kdl  rilm
rilm/: Cargo.toml
rilm/src/: config.rs  main.rs  old.rs  steps.rs
src/: config.rs  error.rs  main.rs  niri.rs  steps.rs
