[workspace]
members = ["authkit", "niri-lm"]
resolver = "3"

[workspace.package]
authors = []
categories = []
description = "A Minimalistic Desktop Environment in 100% Rust Based on Niri."
edition = "2024"
homepage = "hennzau.github.io/niri-de"
license = "MIT"
repository = "https://github.com/Hennzau/niri-de"
rust-version = "1.90.0"
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
authkit = { version = "0.1.0", path = "authkit" }
