[workspace]
members = ["authkit", "logni", "rilm"]
resolver = "3"

[workspace.package]
authors = []
categories = []
description = "A Minimalistic Desktop Environment in 100% Rust Based on Niri."
edition = "2024"
homepage = "hennzau.github.io/niri-de"
license = "MIT"
repository = "https://github.com/Hennzau/niri-de"
rust-version = "1.90.0"
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
authkit = { version = "0.1.0", path = "authkit" }
rilm = { version = "0.1.0", path = "rilm" }

bitflags = "2.9.0"
libc = { version = "0.2" }
nix = { version = "0.30.1", features = ["fs", "ioctl", "process", "user"] }

clap = { version = "4.5.53", features = ["derive"] }

rpassword = "7.4"

tempfile = "3.24.0"
