[workspace]
members = ["authkit"]
resolver = "3"

[workspace.package]
authors = []
categories = []
description = "A Minimalistic Desktop Environment in 100% Rust Based on Niri."
edition = "2024"
homepage = "hennzau.github.io/niri-de"
license = "MIT"
repository = "https://github.com/Hennzau/niri-de"
rust-version = "1.90.0"
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
authkit = { version = "0.1.0", path = "authkit" }

bitflags = "2.9.0"
libc = { version = "0.2" }
nix = { version = "0.30.1", features = ["fs", "ioctl", "process", "user"] }
clap = { version = "4.5.53", features = ["derive"] }
rpassword = "7.4"
tempfile = "3.24.0"

[package]
name = "rilm"
description = "Minimal Niri login manager."
license = "MIT"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[dependencies]
authkit.workspace = true
nix.workspace = true
clap.workspace = true
tempfile.workspace = true
