[package]
name = "authkit"
description = "Rust minimal bindings for Linux-PAM."
license = "MIT"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[dependencies]
bitflags.workspace = true
libc.workspace = true
nix.workspace = true
