[package]
name = "niri-lm"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[dependencies]
authkit.workspace = true

libc = "0.2.178"
nix = { version = "0.30.1", features = ["fs", "ioctl", "mman", "process", "user"] }
pam-sys2 = "1.0.0"
