[package]
name = "rilm"
description = "Minimal Niri login manager."
license = "MIT"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[dependencies]
authkit.workspace = true
nix.workspace = true

clap.workspace = true
